src/objects/JBCXM__DashboardContainer__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__AllowChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__CSSProperties__c</fullName>
        <label>CSSProperties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ContainerInfo__c</fullName>
        <label>ContainerInfo</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ContainerOptions__c</fullName>
        <label>Container Options</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ContainerType__c</fullName>
        <label>ContainerType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__DashboardComponent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DashboardComponent</label>
        <referenceTo>JBCXM__DashboardComponent__c</referenceTo>
        <relationshipLabel>DashboardContainer</relationshipLabel>
        <relationshipName>DashboardContainer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Dashboard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dashboard</label>
        <referenceTo>JBCXM__Dashboard__c</referenceTo>
        <relationshipLabel>DashboardContainer</relationshipLabel>
        <relationshipName>DashboardContainer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <label>DisplayOrder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__SourceId__c</fullName>
        <label>Source Id</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__SourceType__c</fullName>
        <label>Source Type</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__UIView__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UI View Id</label>
        <referenceTo>JBCXM__UIViews__c</referenceTo>
        <relationshipLabel>DashboardContainer</relationshipLabel>
        <relationshipName>DashboardContainer</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DashboardContainer</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>JBCXM__AllowChange__c</columns>
        <columns>JBCXM__ContainerInfo__c</columns>
        <columns>JBCXM__ContainerOptions__c</columns>
        <columns>JBCXM__ContainerType__c</columns>
        <columns>JBCXM__CSSProperties__c</columns>
        <columns>JBCXM__Dashboard__c</columns>
        <columns>JBCXM__DashboardComponent__c</columns>
        <columns>JBCXM__DisplayOrder__c</columns>
        <columns>JBCXM__UIView__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>prad</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DashboardContainer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DashboardContainer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>